//
// Copyright (c) Peter Vrenken. All rights reserved. See the license on https://github.com/vrenken/EtAlii.Ubigia
syntax = "proto3";
import "Data/Clients/_Grpc/_Model.proto";
package EtAlii.Ubigia.Api.Transport.Grpc.WireProtocol;

// The Root Grpc service definition.
service RootGrpcService
{
	rpc GetSingle (RootSingleRequest) returns (RootSingleResponse) {}
	rpc GetMultiple (RootMultipleRequest) returns (stream RootMultipleResponse) {}
	rpc Post (RootPostSingleRequest) returns (RootSingleResponse) {}
	rpc Put (RootSingleRequest) returns (RootSingleResponse) {}
	rpc Delete (RootSingleRequest) returns (RootSingleResponse) {}
}

message RootSingleRequest
{
	Guid SpaceId = 1;
	oneof Selection
	{
		Guid Id = 2;
		string Name = 3;
		Root Root = 4;
	}
}

message RootPostSingleRequest
{
	Guid SpaceId = 1;
	Root Root = 2;
}

message RootMultipleRequest
{
	Guid SpaceId = 1;
}

message RootSingleResponse
{
	Root Root = 1;
}

message RootMultipleResponse
{
	Root Root = 1;
}
